--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
+    <!-- librería para usar íconos -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"> 
+
     <link rel="stylesheet" href="index.css">
 
 
@@ -17,9 +21,18 @@
 
     <div class="wallet-card">
 
+
+        <!-- Ícono superior (billetera) -->
+
+        <div class="wallet-icon">
+            <i class="fa-solid fa-wallet"></i>
+        </div>
+
+
         <!-- Título principal -->
 
         <h1>Alke Wallet</h1>
+
 
         <!-- Texto descriptivo -->
 
@@ -33,10 +46,16 @@
         <button id="btnLogin" class="btn btn-primary btn-login">Iniciar sesión
         </button>
 
+
+        <div class="footer-text">
+            Banco NMMG
+        </div>
+
+
     </div>
 
 
-<script src="index.js"></script>
+    <script src="index.js"></script>
 
 
 
