--- a/login.html
+++ b/login.html
@@ -5,22 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesión</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #ecdde8;
-        }
-
-        .login-box {
-            border-radius: 20px;
-        }
-
-        .actions {
+            background-color: #f4f6f9;
+            min-height: 100vh;
             display: flex;
+            align-items: center;
             justify-content: center;
+            font-family: "Segoe UI", sans-serif;
+        }
+
+        .wallet-icon {
+            font-size: 30px;
+            color: #1f3d7a;
+            margin-bottom: 16px;
+        }
+
+        .wallet-card {
+            position: relative;
+            background: #ffffff;
+            border-radius: 24px;
+            padding: 48px 40px 90px;
+            max-width: 520px;
+            width: 100%;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+            text-align: center;
+            transform: translateY(-60px);
+        }
+
+        /* ===== Botón principal ===== */
+
+        .btn-login {
+            background-color: #1f3d7a;
+            border: none;
+            padding: 12px 36px;
+            font-size: 15px;
+            border-radius: 14px;
+        }
+
+        .btn-login:hover {
+            background-color: #162d5e;
+        }
+
+        /* ===== Texto inferior ===== */
+
+        .footer-text {
+            position: absolute;
+            bottom: 28px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 14px;
+            color: #6c757d;
         }
     </style>
 </head>
@@ -28,36 +68,43 @@
 
 <body>
 
-     <!-- CONTENEDOR PRINCIPAL -->
-    <div class="container py-4 login-box">
+    <!-- Card principal-->
+    <div class="wallet-card">
 
-        <div class="row mx-auto">
-            <div class="col">
-                <h2 class="text-center">Inicio de sesión</h2>
-            </div>
+
+
+        <!-- Icono superior -->
+        <div class="wallet-icon">
+            <i class="fa-solid fa-wallet"></i>
         </div>
 
+        <h2 class="form-title">Inicio de sesión</h2>
+        <p class="form-subtitle">Ingresa con tu correo y contraseña</p>
 
-     <!-- INGRESO DE DATOS -->
-        <form id="loginForm" class="p-4 bg-body-tertiary mx-auto login-box"
-            style="max-width: 600px; width: 100%; border-radius: 24px;">
+        <!-- INGRESO DE DATOS -->
+        <form id="loginForm">
 
             <div class="row align-items-center mb-3">
-                <label for="inputEmail" class="col-12 col-sm-3 col-form-label">Correo:</label>
+                <label for="Email" class="col-12 col-sm-3 col-form-label">Correo:</label>
                 <div class="col-12 col-sm-9">
                     <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo">
                 </div>
             </div>
 
             <div class="row align-items-center mb-3">
-                <label for="inputPassword" class="col-12 col-sm-3 col-form-label">Contraseña:</label>
+                <label for="Password" class="col-12 col-sm-3 col-form-label">Contraseña:</label>
                 <div class="col-12 col-sm-9">
                     <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña">
                 </div>
             </div>
+
+            <!-- Contenedor para alertas bootstrap -->
             <div id="liveAlertPlaceholder"></div>
-            <div class="actions p-2">
-                <button type="submit" class="btn btn-primary">Registro</button>
+
+
+            <div class="text-center mt-3">
+                <button type="submit" class="btn btn-primary btn-login">Iniciar sesión
+                </button>
 
             </div>
         </form>
@@ -67,9 +114,9 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-<script src="login.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="login.js"></script>
 
 </body>
 
