--- a/deposit.html
+++ b/deposit.html
@@ -12,14 +12,50 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #ecdde8;
+            background-color: #f4f6f9;
+            font-family: "Segoe UI", sans-serif;
 
+        }
+
+        .wallet-page {
+            min-height: calc(100vh - 56px);
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            padding: 32px 16px;
+        }
+
+        .wallet-card {
+            background: #fff;
+            border-radius: 24px;
+            padding: 36px 32px;
+            width: 100%;
+            max-width: 520px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, .08);
+        }
+
+        .wallet-title {
+            font-weight: 700;
+            color: #0d1b2a;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
         .actions {
             display: flex;
             justify-content: center;
 
+        }
+
+        .btn-login {
+            background: #1f3d7a;
+            border: none;
+            padding: 12px 28px;
+            border-radius: 14px;
+        }
+
+        .btn-login:hover {
+            background: #162d5e;
         }
     </style>
 </head>
@@ -38,49 +74,54 @@
 
 
     <!-- CONTENEDOR PRINCIPAL -->
-    <div class="container py-4 login-box">
+    <div class="wallet-card">
 
 
-        <div class="row mx-auto">
-            <div class="col">
-                <h2 class="text-center">Depositar</h2>
-            </div>
+        <div class="wallet-icon">
+            <i class="fa-solid fa-wallet"></i>
         </div>
 
-        <div id="alert-container" class="mt-3"></div>
 
-        <!-- FORMULARIO PARA DEPOSITAR -->
-        <form class="p-4 bg-body-tertiary mx-auto login-box"
-            style="max-width: 600px; width: 100%; border-radius: 24px;">
+        <h2 class="wallet-title">Depositar</h2>
 
-            <div class="form-group mb-3">
-
-                <label for="depositAmount">Monto a depositar:</label>
-                <input type="number" class="form-control" id="depositAmount" placeholder="Ingrese monto">
+    </div>
 
 
-                <div class="actions p-2">
-                    <button type="submit" class="btn btn-primary" id="btnDeposito">
-                        Realizar depósito
-                    </button>
-                </div>
+
+    <!-- FORMULARIO PARA DEPOSITAR -->
+    <form class="section">
+
+        <div class="mb-3">
+
+            <label for="depositAmount" class="form-label">Monto a depositar:</label>
+            <input type="number" class="form-control" id="depositAmount" placeholder="Ingrese monto">
+
+
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary btn-login" id="btnDeposito">
+                    Realizar depósito
+                </button>
             </div>
 
-        </form>
-
-        <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
-
-        <!-- VOLVER AL MENÚ -->
-
-        <div class="actions p-5 text-center">
-            <a href="menu.html" class="btn btn-secondary">Ir al Menú Principal</a>
+            <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
+            <div id="alert-container" class="mt-3"></div>
         </div>
+
+    </form>
+
+    <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
+
+    <!-- VOLVER AL MENÚ -->
+
+    <div class="actions p-5 text-center">
+        <a href="menu.html" class="btn btn-secondary">Ir al Menú Principal</a>
+    </div>
 
     </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="depositar.js"></script>
+    <script src="deposit.js"></script>
 
 </body>
 
