--- a/deposit.html
+++ b/deposit.html
@@ -17,6 +17,14 @@
 
         }
 
+        .wallet-icon {
+            font-size: 30px;
+            color: #1f3d7a;
+            margin-bottom: 16px;
+            display: flex;
+            justify-content: center;
+        }
+
         .wallet-page {
             min-height: calc(100vh - 56px);
             display: flex;
@@ -57,6 +65,10 @@
         .btn-login:hover {
             background: #162d5e;
         }
+
+        #depositAmount {
+            margin-bottom: 18px;
+        }
     </style>
 </head>
 
@@ -74,51 +86,49 @@
 
 
     <!-- CONTENEDOR PRINCIPAL -->
-    <div class="wallet-card">
+    <div class="container d-flex justify-content-center mt-5">
 
+        <div class="wallet-card">
 
-        <div class="wallet-icon">
-            <i class="fa-solid fa-wallet"></i>
-        </div>
-
-
-        <h2 class="wallet-title">Depositar</h2>
-
-    </div>
-
-
-
-    <!-- FORMULARIO PARA DEPOSITAR -->
-    <form class="section">
-
-        <div class="mb-3">
-
-            <label for="depositAmount" class="form-label">Monto a depositar:</label>
-            <input type="number" class="form-control" id="depositAmount" placeholder="Ingrese monto">
-
-
-            <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary btn-login" id="btnDeposito">
-                    Realizar depósito
-                </button>
+            <div class="wallet-icon">
+                <i class="fa-solid fa-wallet"></i>
             </div>
 
-            <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
-            <div id="alert-container" class="mt-3"></div>
+            <h2 class="wallet-title">Depositar</h2>
+
+
+            <!-- FORMULARIO PARA DEPOSITAR -->
+            <form class="section">
+
+                <div class="mb-3">
+
+                    <label for="depositAmount" class="form-label">Monto a depositar:</label>
+                    <input type="number" class="form-control" id="depositAmount" placeholder="Ingrese monto">
+
+
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-primary btn-login" id="btnDeposito">
+                            Realizar depósito
+                        </button>
+                    </div>
+
+                    <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
+                    <div id="alert-container" class="mt-3"></div>
+                </div>
+
+            </form>
+
         </div>
 
-    </form>
+        <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
 
-    <div id="mensajeDeposito" class="text-center fw-bold mt-3"></div>
-
-    <!-- VOLVER AL MENÚ -->
-
+        <!-- VOLVER AL MENÚ -->
+    </div>
     <div class="actions p-5 text-center">
         <a href="menu.html" class="btn btn-secondary">Ir al Menú Principal</a>
     </div>
 
     </div>
-
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="deposit.js"></script>
