--- a/sendmoney.html
+++ b/sendmoney.html
@@ -9,18 +9,70 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <style>
         body {
-            background-color: #ecdde8;
+            background-color: #f4f6f9;
+            min-height: 100vh;
+        }
+
+        .wallet-card {
+            background: #ffffff;
+            border-radius: 24px;
+            padding: 40px;
+            max-width: 600px;
+            width: 100%;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+        }
+
+        .wallet-icon {
+            font-size: 36px;
+            color: #1f3d7a;
+            text-align: center;
+            margin-bottom: 12px;
+        }
+
+        .wallet-title {
+            font-weight: 600;
+            color: #0d1b2a;
         }
 
         .actions {
             display: flex;
             justify-content: center;
 
+        }
+
+        /* Botones principales */
+        .btn-primary {
+            background-color: #1f3d7a;
+            border-color: #1f3d7a;
+            font-weight: 500;
+        }
+
+        .btn-primary:hover,
+        .btn-primary:focus {
+            background-color: #162d5e;
+            border-color: #162d5e;
+        }
+
+        /* Botón secundario (volver al menú) */
+        .btn-secondary {
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5c636a;
+            border-color: #5c636a;
+        }
+
+        /* Botón deshabilitado */
+        .btn-primary:disabled {
+            background-color: #9fb0d1;
+            border-color: #9fb0d1;
+            cursor: not-allowed;
         }
     </style>
 </head>
@@ -41,27 +93,26 @@
 
 
     <!-- CONTENEDOR PRINCIPAL -->
-    <div class="container py-4 login-box">
+    <div class="container d-flex justify-content-center py-5">
 
+        <!-- TARJETA WALLET -->
+        <div class="wallet-card">
 
-        <div class="row mx-auto">
-            <div class="col">
-                <h2 class="text-center">Enviar dinero</h2>
+            <div class="wallet-icon">
+                <i class="fa-solid fa-wallet"></i>
             </div>
-        </div>
 
-        <!-- CONTACTOS-->
-        <form class="p-4 bg-body-tertiary mx-auto login-box"
-            style="max-width: 600px; width: 100%; border-radius: 24px;">
 
-            <!-- Agenda -->
+            <h2 class="wallet-title text-center mb-4">Enviar dinero</h2>
 
-            <div class="form-group mb-3">
+
+            <!-- CONTACTOS-->
+            <form>
 
                 <!-- OPCIONES PRINCIPALES -->
-                <div class="d-flex gap-2 mt-2">
+                <div class="d-flex gap-2 mb-3">
                     <button type="button" class="btn btn-primary flex-fill" id="btnMostrarAgenda">
-                        Buscar en la agenda de contactos
+                        Buscar contacto
                     </button>
 
 
@@ -75,7 +126,7 @@
                 <!-- ✅ AGENDA (oculta al inicio) -->
                 <div id="agendaContainer" class="mt-3 d-none">
 
-                    <!-- FORMULARIO DE BÚSQUEDA -->
+                    <!-- BÚSQUEDA -->
                     <div class="mb-3">
                         <label for="buscarcontacto">Buscar en la agenda:</label>
                         <input type="text" class="form-control" id="buscarcontacto"
@@ -119,35 +170,16 @@
                 <div id="confirmacionEnvio" class="text-center mt-3 fw-bold"></div>
                 <div id="alert-container" class="mt-3"></div>
 
-            </div>
-        </form>
+                <!-- VOLVER AL MENÚ -->
+
+                <div class="text-center mt-4">
+                    <a href="menu.html" class="btn btn-secondary">Ir al Menú Principal</a>
+                </div>
+
+            </form>
 
 
-    </div>
-
-
-
-
-
-    <!--  Ocultar boton  -->
-
-    <div class="actions p-2">
-        <button type="button" class="btn btn-primary d-none" id="btnEnviarDinero">Enviar dinero</button>
-    </div>
-
-    <!-- Confirmación de envio y alerta -->
-
-    <div id="confirmacionEnvio" class="text-center mt-3 fw-bold"></div>
-    <div id="alert-container" class="mt-3"></div>
-
-
-    </form>
-
-    <!-- VOLVER AL MENÚ -->
-
-    <div class="actions p-5 text-center">
-        <a href="menu.html" class="btn btn-secondary">Ir al Menú Principal</a>
-    </div>
+        </div>
 
 
     </div>
@@ -227,7 +259,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="EnviarDinero.js"></script>
+    <script src="sendmoney.js"></script>
 
 </body>
 
