--- a/menu.html
+++ b/menu.html
@@ -7,70 +7,63 @@
     <title>Menú principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-   
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-     background-color: #ecdde8; 
-    
-}
-    </style>
+
+    <link rel="stylesheet" href="menu.css">
 </head>
 
 <body>
 
-     <!-- CONTENEDOR PRINCIPAL -->
-    <div class="container py-4 login-box">
+    <!-- CONTENEDOR PRINCIPAL -->
 
-        <div class="row mx-auto">
-            <div class="col">
-                <h2 class="text-center">Menú principal</h2>
-            </div>
-        </div>
+    <div class="container d-flex justify-content-center py-5">
 
-     <!-- SALDO . DINERO EN CUENTA -->
-        <div class="container">
+        <div class="wallet-card">
 
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6">
-                    <div class="card shadow-sm border-0 rounded-4">
-                        <div class="card-body p-4 text-center">
-                            <label for="balance">Dinero en cuenta:</label>
-                            <h3>$60.000</h3>
-                        </div>
-                    </div>
-                </div>
+            <div class="wallet-icon">
+                <i class="fa-solid fa-wallet"></i>
             </div>
 
-     <!-- BOTONES -->
 
-            <div class="row justify-content-center mt-4">
-                <div class="col-12 col-md-8 col-lg-6">
-                    <div class="row g-3">
-
-                        <div class="col-12 col-sm-4 d-grid">
-                            <button id="btnDepositar" class="btn btn-primary">Depositar</a>
-                        </div>
-
-                        <div class="col-12 col-sm-4 d-grid">
-                            <button id="btnEnviar" class="btn btn-primary">Enviar dinero</a>
-                        </div>
-
-                        <div class="col-12 col-sm-4 d-grid">
-                            <button id="btnMovimientos" class="btn btn-primary">Últimos
-                                movimientos</a>
-                        </div>
-
-                        <div id="mensaje" class="text-center mt-3 fw-bold"></div>
+            <h2 class="text-center">Menú principal</h2>
 
 
-                    </div>
+            <!-- SALDO . DINERO EN CUENTA -->
+
+
+            <div class="saldo-card">
+                <div class="saldo-label">Dinero en cuenta:</div>
+                <p>$60.000</p>
+            </div>
+
+            <!-- BOTONES -->
+
+            <div class="row g-3 justify-content-center">
+
+
+                <div class="col-12 col-sm-4 d-grid">
+                    <button id="btnDepositar" class="btn btn-primary">Depositar</a>
                 </div>
+
+                <div class="col-12 col-sm-4 d-grid">
+                    <button id="btnEnviar" class="btn btn-primary">Enviar dinero</a>
+                </div>
+
+                <div class="col-12 col-sm-4 d-grid">
+                    <button id="btnMovimientos" class="btn btn-primary">Últimos
+                        movimientos</a>
+                </div>
+
+                <div id="mensaje" class="text-center mt-3 fw-bold"></div>
+
+
+
             </div>
         </div>
     </div>
 
-     <script src="menu.js"></script>
+    <script src="menu.js"></script>
 
 </body>
 
