--- a/login.html
+++ b/login.html
@@ -10,59 +10,9 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f4f6f9;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: "Segoe UI", sans-serif;
-        }
+    
+    <link rel="stylesheet" href="login.css">
 
-        .wallet-icon {
-            font-size: 30px;
-            color: #1f3d7a;
-            margin-bottom: 16px;
-        }
-
-        .wallet-card {
-            position: relative;
-            background: #ffffff;
-            border-radius: 24px;
-            padding: 48px 40px 90px;
-            max-width: 520px;
-            width: 100%;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-            text-align: center;
-            transform: translateY(-60px);
-        }
-
-        /* ===== Botón principal ===== */
-
-        .btn-login {
-            background-color: #1f3d7a;
-            border: none;
-            padding: 12px 36px;
-            font-size: 15px;
-            border-radius: 14px;
-        }
-
-        .btn-login:hover {
-            background-color: #162d5e;
-        }
-
-        /* ===== Texto inferior ===== */
-
-        .footer-text {
-            position: absolute;
-            bottom: 28px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 14px;
-            color: #6c757d;
-        }
-    </style>
 </head>
 
 
@@ -70,8 +20,6 @@
 
     <!-- Card principal-->
     <div class="wallet-card">
-
-
 
         <!-- Icono superior -->
         <div class="wallet-icon">
