--- a/deposit.html
+++ b/deposit.html
@@ -10,66 +10,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f4f6f9;
-            font-family: "Segoe UI", sans-serif;
-
-        }
-
-        .wallet-icon {
-            font-size: 30px;
-            color: #1f3d7a;
-            margin-bottom: 16px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .wallet-page {
-            min-height: calc(100vh - 56px);
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
-            padding: 32px 16px;
-        }
-
-        .wallet-card {
-            background: #fff;
-            border-radius: 24px;
-            padding: 36px 32px;
-            width: 100%;
-            max-width: 520px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, .08);
-        }
-
-        .wallet-title {
-            font-weight: 700;
-            color: #0d1b2a;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .actions {
-            display: flex;
-            justify-content: center;
-
-        }
-
-        .btn-login {
-            background: #1f3d7a;
-            border: none;
-            padding: 12px 28px;
-            border-radius: 14px;
-        }
-
-        .btn-login:hover {
-            background: #162d5e;
-        }
-
-        #depositAmount {
-            margin-bottom: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="deposit.css">
 </head>
 
 
